found a couple more tools references

--- a/ClientRuntimes/CSharp/ClientRuntime.Etw/ClientRuntime.Etw.csproj
+++ b/ClientRuntimes/CSharp/ClientRuntime.Etw/ClientRuntime.Etw.csproj
@@ -35,7 +35,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <CodeAnalysisDictionary Include="$(SolutionDir)tools\CustomDictionary.xml">
+    <CodeAnalysisDictionary Include="$(SolutionDir)Tools\CustomDictionary.xml">
       <Link>CustomDictionary.xml</Link>
     </CodeAnalysisDictionary>
   </ItemGroup>
