--- a/AutoRest/Generators/Ruby/Azure.Ruby.Tests/AutoRest.Generator.Azure.Ruby.Tests.csproj
+++ b/AutoRest/Generators/Ruby/Azure.Ruby.Tests/AutoRest.Generator.Azure.Ruby.Tests.csproj
@@ -66,7 +66,9 @@
     <None Include="RspecTests\head_spec.rb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="RspecTests\lro_spec.rb" />
+    <None Include="RspecTests\lro_spec.rb">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="RspecTests\paging_spec.rb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
