--- a/AutoRest/AutoRest.Core/AutoRest.nuspec
+++ b/AutoRest/AutoRest.Core/AutoRest.nuspec
@@ -16,11 +16,12 @@
     <tags>Microsoft AutoRest</tags>
   </metadata>
   <files>
-    <file src="..\binaries\net45\AutoRest.Core.*" target="lib\portable-net45+sl50+wp80+win" />
-    <file src="..\binaries\net45\AutoRest.exe" target="lib\portable-net45+sl50+wp80+win" />
-    <file src="..\binaries\net45\AutoRest.json" target="lib\portable-net45+sl50+wp80+win" />
-    <file src="..\binaries\net45\AutoRest.Generator.CSharp.*" target="lib\portable-net45+sl50+wp80+win" />
-    <file src="..\binaries\net45\AutoRest.Modeler.Swagger.*" target="lib\portable-net45+sl50+wp80+win" />    
-    <file src="..\binaries\net45\Newtonsoft.Json.*" target="lib\portable-net45+sl50+wp80+win" />
+    <file src="..\binaries\net45\AutoRest.Core.*" target="tools" />
+    <file src="..\binaries\net45\AutoRest.exe" target="tools" />
+    <file src="..\binaries\net45\AutoRest.ToRelease.json" target="tools\AutoRest.json" />
+    <file src="..\binaries\net45\AutoRest.Generator.CSharp.*" target="tools" />
+    <file src="..\binaries\net45\AutoRest.Generator.NodeJS.*" target="tools" />
+    <file src="..\binaries\net45\AutoRest.Modeler.Swagger.*" target="tools" />    
+    <file src="..\binaries\net45\Newtonsoft.Json.*" target="tools" />
   </files>
 </package>
