--- a/AutoRest/Generators/CSharp/CSharp.Tests/AutoRest.Generator.CSharp.Tests.csproj
+++ b/AutoRest/Generators/CSharp/CSharp.Tests/AutoRest.Generator.CSharp.Tests.csproj
@@ -97,6 +97,10 @@
       <Link>Swagger\body-dictionary.json</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="..\..\AcceptanceTests\swagger\body-file.json">
+      <Link>Swagger\body-file.json</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="..\..\AcceptanceTests\swagger\body-integer.json">
       <Link>Swagger\body-integer.json</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -177,6 +181,27 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Expected\SwaggerBat\BodyFile.Cs\AutoRestSwaggerBATFileService.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Compile>
+    <Compile Include="Expected\SwaggerBat\BodyFile.Cs\AutoRestSwaggerBATFileServiceExtensions.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Compile>
+    <Compile Include="Expected\SwaggerBat\BodyFile.Cs\Files.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Compile>
+    <Compile Include="Expected\SwaggerBat\BodyFile.Cs\FilesExtensions.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Compile>
+    <Compile Include="Expected\SwaggerBat\BodyFile.Cs\IAutoRestSwaggerBATFileService.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Compile>
+    <Compile Include="Expected\SwaggerBat\BodyFile.Cs\IFiles.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Compile>
+    <Compile Include="Expected\SwaggerBat\BodyFile.Cs\Models\Error.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CSharpSwaggerBat.cs" />
     <Compile Include="Expected\Mirror.RecursiveTypes.Cs\IRecursiveTypesAPI.cs" />
@@ -861,5 +886,10 @@
     <Compile Include="SwaggerBatTestOrderer.cs" />
     <Compile Include="Utilities\TestExtensions.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="..\..\AcceptanceTests\server\routes\sample.png">
+      <Link>sample.png</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
