--- a/AutoRest/Generators/AcceptanceTests/NugetPackageTest/NugetPackageCSharpTest.csproj
+++ b/AutoRest/Generators/AcceptanceTests/NugetPackageTest/NugetPackageCSharpTest.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>NuGetPackageTest</RootNamespace>
-    <AssemblyName>NuGetPackageTest</AssemblyName>
+    <AssemblyName>NugetPackageCSharpTest</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -59,7 +59,7 @@
     <Compile Include="..\..\CSharp\CSharp.Tests\Utilities\ServiceController.cs">
       <Link>ServiceController.cs</Link>
     </Compile>
-    <Compile Include="Expected\**\*.cs" />
+    <Compile Include="Generated\CSharp\**\*.cs" />
     <Compile Include="PackageTests.cs" />
   </ItemGroup>
   <ItemGroup>
