--- a/AutoRest/Generators/NodeJS/NodeJS/AutoRest.Generator.NodeJS.csproj
+++ b/AutoRest/Generators/NodeJS/NodeJS/AutoRest.Generator.NodeJS.csproj
@@ -26,6 +26,11 @@
     <Compile Include="NodeJSCodeGenerator.cs" />
     <Compile Include="NodeJsCodeNamer.cs" />
     <Compile Include="IScopeProvider.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="ScopeProvider.cs" />
     <Compile Include="TemplateModels\MethodGroupTemplateModel.cs" />
     <Compile Include="TemplateModels\ModelTemplateModel.cs" />
@@ -60,6 +65,12 @@
     <CodeAnalysisDictionary Include="..\..\..\..\tools\CustomDictionary.xml">
       <Link>CustomDictionary.xml</Link>
     </CodeAnalysisDictionary>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
