Fixed the following Paging tests: get_multiple_pages_retry_first, get_multiple_pages_retry_second.

--- a/AutoRest/Generators/Ruby/Azure.Ruby.Tests/AutoRest.Generator.Azure.Ruby.Tests.csproj
+++ b/AutoRest/Generators/Ruby/Azure.Ruby.Tests/AutoRest.Generator.Azure.Ruby.Tests.csproj
@@ -62,7 +62,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <None Include="RspecTests\azure_report_spec.rb" />
+    <None Include="RspecTests\azure_report_spec.rb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="RspecTests\azure_special_properties_spec.rb" />
     <None Include="RspecTests\azure_url_spec.rb" />
     <None Include="RspecTests\head_spec.rb">
