--- a/AutoRest/Generators/Ruby/Azure.Ruby.Tests/AutoRest.Generator.Azure.Ruby.Tests.csproj
+++ b/AutoRest/Generators/Ruby/Azure.Ruby.Tests/AutoRest.Generator.Azure.Ruby.Tests.csproj
@@ -65,13 +65,17 @@
     <None Include="RspecTests\azure_report_spec.rb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="RspecTests\azure_special_properties_spec.rb" />
-    <None Include="RspecTests\azure_url_spec.rb" />
+    <None Include="RspecTests\azure_special_properties_spec.rb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="RspecTests\azure_url_spec.rb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="RspecTests\head_spec.rb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="RspecTests\lro_spec.rb">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="RspecTests\paging_spec.rb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
