--- a/ClientRuntimes/CSharp/ClientRuntime.Azure.Tests/ClientRuntime.Azure.Tests.csproj
+++ b/ClientRuntimes/CSharp/ClientRuntime.Azure.Tests/ClientRuntime.Azure.Tests.csproj
@@ -29,6 +29,7 @@
     <Compile Include="LongRunningOperationsTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CloudErrorJsonConverterTest.cs" />
+    <Compile Include="PageJsonConverterTest.cs" />
     <Compile Include="ResourceJsonConverterTest.cs" />
     <Compile Include="Sample\RedisManagementClient.cs" />
     <Compile Include="Sample\GenericResource.cs" />
