Added UUID generation for x-ms-client-request-id in NodeJS

--- a/ClientRuntimes/NodeJS/ClientRuntime.Azure/package.json
+++ b/ClientRuntimes/NodeJS/ClientRuntime.Azure/package.json
@@ -21,6 +21,7 @@
   ],
   "dependencies": {
     "async": "0.2.7",
+    "uuid": "2.0.1",
     "ms-rest": "file:../ClientRuntime"
   },
   "devDependencies": {
