--- a/ClientRuntimes/CSharp/ClientRuntime.Azure/ClientRuntime.Azure.csproj
+++ b/ClientRuntimes/CSharp/ClientRuntime.Azure/ClientRuntime.Azure.csproj
@@ -46,7 +46,7 @@
     <Compile Include="JsonSerializerExtensions.cs" />
     <Compile Include="OData\FilterString.cs" />
     <Compile Include="OData\UrlExpressionVisitor.cs" />
-    <Compile Include="PageCollection.cs" />
+    <Compile Include="Page.cs" />
     <Compile Include="PollingState.cs" />
     <Compile Include="SubResource.cs" />
     <Compile Include="Resource.cs" />
