--- a/ClientRuntimes/CSharp/ClientRuntime.Azure/Microsoft.Rest.ClientRuntime.Azure.nuspec
+++ b/ClientRuntimes/CSharp/ClientRuntime.Azure/Microsoft.Rest.ClientRuntime.Azure.nuspec
@@ -16,23 +16,19 @@
       Supported Platforms:
       -   Portable Class Libraries
       -   .NET Framework 4.5
-      -   .NET Framework 4.0
       -   Windows 8
       -   Windows Phone 8.1
     </description>
     <copyright>Copyright © Microsoft Corporation</copyright>
     <tags>Microsoft "Microsoft Azure" Azure REST azureofficial</tags>
     <frameworkAssemblies>
-      <frameworkAssembly assemblyName="System.Runtime.Serialization" targetFramework="net40, net45" />
+      <frameworkAssembly assemblyName="System.Runtime.Serialization" targetFramework="net45" />
     </frameworkAssemblies>
     <references>
-      <group targetFramework="portable-net403+win+wpa81">
+      <group targetFramework="portable-net45+win8+wpa81">
         <reference file="Microsoft.Rest.ClientRuntime.Azure.dll" />
       </group>
       <group targetFramework="net45">
-        <reference file="Microsoft.Rest.ClientRuntime.Azure.dll" />
-      </group>
-      <group targetFramework="net40">
         <reference file="Microsoft.Rest.ClientRuntime.Azure.dll" />
       </group>
     </references>
@@ -43,14 +39,11 @@
   <files>
     <file src="ClientRuntime.Azure\**\*.cs" target="src\Common" />
     <file src="ClientRuntime.Azure\Properties\*.resx" target="src\Common\Properties" />
-    <file src="..\..\binaries\portable\Microsoft.Rest.ClientRuntime.Azure.dll" target="lib\portable-net403+win+wpa81" />
-    <file src="..\..\binaries\portable\Microsoft.Rest.ClientRuntime.Azure.pdb" target="lib\portable-net403+win+wpa81" />
-    <file src="..\..\binaries\portable\Microsoft.Rest.ClientRuntime.Azure.xml" target="lib\portable-net403+win+wpa81" />
+    <file src="..\..\binaries\portable\Microsoft.Rest.ClientRuntime.Azure.dll" target="lib\portable-net45+win8+wpa81" />
+    <file src="..\..\binaries\portable\Microsoft.Rest.ClientRuntime.Azure.pdb" target="lib\portable-net45+win8+wpa81" />
+    <file src="..\..\binaries\portable\Microsoft.Rest.ClientRuntime.Azure.xml" target="lib\portable-net45+win8+wpa81" />
     <file src="..\..\binaries\net45\Microsoft.Rest.ClientRuntime.Azure.dll" target="lib\net45" />
     <file src="..\..\binaries\net45\Microsoft.Rest.ClientRuntime.Azure.pdb" target="lib\net45" />
     <file src="..\..\binaries\net45\Microsoft.Rest.ClientRuntime.Azure.xml" target="lib\net45" />
-    <file src="..\..\binaries\net40\Microsoft.Rest.ClientRuntime.Azure.dll" target="lib\net40" />
-    <file src="..\..\binaries\net40\Microsoft.Rest.ClientRuntime.Azure.pdb" target="lib\net40" />
-    <file src="..\..\binaries\net40\Microsoft.Rest.ClientRuntime.Azure.xml" target="lib\net40" />
   </files>
 </package>
