--- a/AutoRest/Generators/Ruby/Ruby/AutoRest.Generator.Ruby.csproj
+++ b/AutoRest/Generators/Ruby/Ruby/AutoRest.Generator.Ruby.csproj
@@ -24,6 +24,7 @@
     <Compile Include="RubyCodeGenerator.cs" />
     <Compile Include="RubyCodeNamer.cs" />
     <Compile Include="IScopeProvider.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
