Fixed issue #195 "Model was missing from generated code even though it is used directly"

--- a/AutoRest/Generators/Azure.Common/Azure.Common.Tests/AutoRest.Generator.Azure.Common.Tests.csproj
+++ b/AutoRest/Generators/Azure.Common/Azure.Common.Tests/AutoRest.Generator.Azure.Common.Tests.csproj
@@ -37,6 +37,9 @@
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Swagger\swagger-resource-flattening.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\AutoRest.Core\AutoRest.Core.csproj">
