Adding unit tests and merging with build changes

--- a/ClientRuntimes/CSharp/ClientRuntime.Azure.Tests/ClientRuntime.Azure.Tests.csproj
+++ b/ClientRuntimes/CSharp/ClientRuntime.Azure.Tests/ClientRuntime.Azure.Tests.csproj
@@ -21,6 +21,7 @@
   </PropertyGroup>
   <Import Project="$(SolutionDir)\tools\AutoRest.Settings.targets" />
   <ItemGroup>
+    <Compile Include="AzureEnvironmentTest.cs" />
     <Compile Include="Fakes\FakeServiceClientWithCredentials.cs" />
     <Compile Include="Fakes\FakeServiceClient.cs" />
     <Compile Include="Fakes\PlaybackTestHandler.cs" />
