--- a/ClientRuntimes/Ruby/ms-rest/Gemfile
+++ b/ClientRuntimes/Ruby/ms-rest/Gemfile
@@ -1,6 +1,6 @@
 source 'https://rubygems.org'
 
-# Specify your gem's dependencies in client_runtime.gemspec
+# Specify your gem's dependencies in ms_rest.gemspec
 gemspec
 
 group :development, :local, :test do
