--- a/ClientRuntimes/Ruby/ms-rest-azure/Gemfile
+++ b/ClientRuntimes/Ruby/ms-rest-azure/Gemfile
@@ -5,4 +5,8 @@ gemspec
 
 group :development, :local, :test do
   gem 'rspec'
+  gem 'json'
+  gem 'timeliness'
+  gem 'concurrent-ruby-ext'
+  gem 'ms_rest'
 end
