--- a/ClientRuntimes/CSharp/ClientRuntime.Azure.Tests/ClientRuntime.Azure.Tests.csproj
+++ b/ClientRuntimes/CSharp/ClientRuntime.Azure.Tests/ClientRuntime.Azure.Tests.csproj
@@ -24,6 +24,7 @@
     <Compile Include="AzureEnvironmentTest.cs" />
     <Compile Include="Fakes\FakeServiceClientWithCredentials.cs" />
     <Compile Include="Fakes\FakeServiceClient.cs" />
+    <Compile Include="Fakes\InMemoryTokenStore.cs" />
     <Compile Include="Fakes\PlaybackTestHandler.cs" />
     <Compile Include="Fakes\RecordedDelegatingHandler.cs" />
     <Compile Include="ODataTests.cs" />
