Added ADAL dependency for ClientRuntime.Azure.

--- a/ClientRuntimes/CSharp/ClientRuntime.Azure/Microsoft.Rest.ClientRuntime.Azure.nuspec
+++ b/ClientRuntimes/CSharp/ClientRuntime.Azure/Microsoft.Rest.ClientRuntime.Azure.nuspec
@@ -34,6 +34,7 @@
     </references>
     <dependencies>
       <dependency id="Microsoft.Rest.ClientRuntime" version="[__VERSION_Microsoft.Rest.ClientRuntime__,2)" />
+      <dependency id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.5.207081303-alpha" />
     </dependencies>
   </metadata>
   <files>
